@@ -1,3 +1,7 @@
+2010-05-07  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14202: htmlArea RTE: Tables may get lost when using remove format feature
+
 2010-04-19  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14153: htmlAreaRTE: Some Page TSConfig may break default hotkey assignments
